--- a/style.css
+++ b/style.css
@@ -72,13 +72,26 @@ input[type=mail] {
     resize: vertical;
 }
 input[type=text], select, textarea {
-        width: 50%;
-        padding: 12px;
-        border: 1px solid rgb(245, 236, 210);
-        border-radius: 4px;
-        box-sizing: border-box;
-        margin-top: 6px;
-        margin-bottom: 16px;
-        resize: vertical;
-      }
-      
+    width: 50%;
+    padding: 12px;
+    border: 1px solid rgb(245, 236, 210);
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+* {
+    box-sizing: border-box;
+}     
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
