--- a/style.css
+++ b/style.css
@@ -16,10 +16,17 @@ h4{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: rgb(245, 236, 210);
 }
+img {
+    border-radius: 50%;
+    width: 300; 
+    height: 300px;
+    float: left;
+}
 p {
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgb(245, 236, 210);}
+    color: rgb(245, 236, 210);
+}
 .topnav {
     text-align: center;
     overflow: hidden;
@@ -32,9 +39,6 @@ p {
     padding: 14px 16px;
     text-decoration:double;
     font-size: 20px;
-}
-footer {
-    color:rgb(245, 236, 210);
 }
 label {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -94,4 +98,9 @@ input[type=text], select, textarea {
     clear: both;
     display: table;
 }
-
+footer{
+    background-color: rgb(48, 46, 46);
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(245, 236, 210); 
+}
